--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mobile",
+  "name": "bolao-copa-mobile",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
